test/conformance/chainsaw/mutating-policies/existing/variables/auto-bind-sa-remove/.chainsaw-tests/crb-with-other-sa-subject.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: test-crb-other-sa
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: view
subjects:
- kind: ServiceAccount
  name: sa-no-annotation
  namespace: default
