test/conformance/chainsaw/mutating-policies/existing/variables/auto-bind-sa-remove/.chainsaw-tests/crb-with-sa-subject.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: test-crb-auto-bind-remove
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: view
subjects:
- kind: ServiceAccount
  name: sa-auto-bind-remove
  namespace: default
