test/conformance/chainsaw/mutating-policies/existing/variables/auto-bind-sa-remove/.chainsaw-tests/sa-auto-bind-remove.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  name: sa-auto-bind-remove
  namespace: default
  annotations:
    rbac.example.com/auto-bind: "true"
