test/conformance/chainsaw/mutating-policies/existing/variables/auto-bind-sa-remove/.chainsaw-tests/sa-no-annotation.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  name: sa-no-annotation
  namespace: default
